--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/ChronoBank/LX-SC#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "ethereumjs-testrpc": "^3.0.3",
     "truffle": "^3.1.2"
   }
 }
