--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "truffle test",
     "compile": "truffle compile",
     "truffle": "truffle",
-    "testrpc": "testrpc -m 'fun puzzle laundry wheat evoke gold tube family fog act aspect visa'"
+    "testrpc": "testrpc"
   },
   "repository": {
     "type": "git",
