--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "description": "ChronoBank Labor-X Smart Contracts",
   "scripts": {
-    "test": "truffle test",
-    "compile": "truffle compile",
-    "truffle": "truffle",
-    "testrpc": "testrpc"
+    "test:all": "./node_modules/truffle/build/cli.bundled.js test",
+    "compile": "./node_modules/truffle/build/cli.bundled.js compile",
+    "compile:all": "./node_modules/truffle/build/cli.bundled.js compile --all",
+    "migrate": "./node_modules/truffle/build/cli.bundled.js migrate",
+    "migrate:reset": "./node_modules/truffle/build/cli.bundled.js migrate --reset",
+    "console": "./node_modules/truffle/build/cli.bundled.js console --network development",
+    "testrpc": "./node_modules/ethereumjs-testrpc/build/cli.node.js -g 1 --gasLimit 4700000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
   },
   "repository": {
     "type": "git",
