--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "truffle"
   ],
   "author": "ChronoBank",
-  "license": "LGPL-3.0",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/ChronoBank/LX-SC/issues"
   },
