--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.5.0",
     "ethereumjs-testrpc": "^6.0.3",
     "truffle": "4.1.0",
-    "abi-decoder": "^1.0.9"
+    "abi-decoder": "^1.0.9",
+    "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014"
   }
 }
