LABX-122 Deploy LHT instead of FakeCoin

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ethereumjs-testrpc": "^6.0.3",
     "truffle": "4.1.0",
     "abi-decoder": "^1.0.9",
-    "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014"
+    "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014",
+    "openzeppelin-solidity": "1.8.0"
   }
 }
