--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 - export NODE_OPTIONS="--max_old_space_size=4096"
 - export PATH=$PATH:$(pwd)/node_modules/.bin
 script:
-- testrpc -g 1 > /dev/null &
+- ganache-cli -g 1 > /dev/null &
 - truffle test
