--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate": "./node_modules/truffle/build/cli.bundled.js migrate",
     "migrate:reset": "./node_modules/truffle/build/cli.bundled.js migrate --reset",
     "console": "./node_modules/truffle/build/cli.bundled.js console --network development",
-    "testrpc": "./node_modules/ethereumjs-testrpc/build/cli.node.js -g 1 --gasLimit 4700000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
+    "testrpc": "./node_modules/ganache-cli/build/cli.node.js -g 1 --gasLimit 4700000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
   },
   "repository": {
     "type": "git",
@@ -28,12 +28,13 @@
   "homepage": "https://github.com/ChronoBank/LX-SC#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "ethereumjs-testrpc": "^6.0.3",
-    "truffle": "4.1.0",
     "abi-decoder": "^1.0.9",
-    "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014"
+    "solidity-storage-lib": "chronobank/solidity-storage-lib"
   },
   "devDependencies": {
+    "ganache-cli": "^6.1.0",
+    "truffle": "4.1.7",
+    "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014",
     "standard-version": "^4.0.0"
   }
 }
